--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <header>
         <hr>
         <div style="margin-left: 50px;">
-            <p style="text-align: center; font-size: 30px; font-weight: bold;" > h1 .... h6 </p>
-                
-        </div>
+            <p style="text-align: center; font-size: 30px; font-weight: 
         <hr>
         <div style="margin-left: 50px;">
             <p class="text-tags" > Matnlar bilan ishlah </p>
