--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <hr>
         <div style="margin-left: 50px;">
-            <p style="text-align: center; font-size: 30px; font-weight: 
+            <p style="text-align: center; font-
         <hr>
         <div style="margin-left: 50px;">
             <p class="text-tags" > Matnlar bilan ishlah </p>
